welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:11: error: not found: value prendBaggle
    	prendBaggle()
        ^